--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
         "cryptr": "^6.3.0",
         "express": "^4.21.0",
         "mongodb": "^6.9.0",
+        "mongoose": "^8.6.3",
         "socket.io": "^4.7.5"
     },
     "devDependencies": {
